objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>AIA Benefit Design Cases</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>AIA Issue Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending Assignment</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NCR Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SBU Broker Support Process</fullName>
        <description>This Process will drive the Small/Medium SBU broker sales, support and service</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Awaiting</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>In-Queue</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Routed To Facets</fullName>
        </values>
        <values>
            <fullName>Routed to Management</fullName>
        </values>
        <values>
            <fullName>Routed to Other Department</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SFDC Support</fullName>
        <description>SFDC Support Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting %E2%80%93 CI Project New User Training</fullName>
        </values>
        <values>
            <fullName>Awaiting - CIAM</fullName>
        </values>
        <values>
            <fullName>Awaiting - Customer Review</fullName>
        </values>
        <values>
            <fullName>Awaiting - License Purchase</fullName>
        </values>
        <values>
            <fullName>Awaiting - SF_FPRB Meeting</fullName>
        </values>
        <values>
            <fullName>Awaiting - Team Conversation %2F Meeting</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Placed in future sprint</fullName>
        </values>
        <values>
            <fullName>Closed - Resolved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AIA_Benefit_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AI_Project_Manager_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AI Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_0_2__c</fullName>
        <formula>IF( Days_Case_Open__c  &gt;= 0 &amp;&amp;Days_Case_Open__c  &lt;= 2 &amp;&amp; NOT(ISBLANK( Received_Date__c )) &amp;&amp; NOT(ispickval(Status,"Closed")) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age 0-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_121_150__c</fullName>
        <description>Counts cases with 'Open Status' those are Aged between 121 to 150 days</description>
        <formula>IF( Days_Case_Open__c &gt;= 121 &amp;&amp;Days_Case_Open__c &lt;= 150 , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age 121-150</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_151_180__c</fullName>
        <description>Counts 'Open Cases' between 151 to 180</description>
        <formula>IF( Days_Case_Open__c &gt;= 151 &amp;&amp;Days_Case_Open__c &lt;= 180 , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age 151-180</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_181__c</fullName>
        <description>Counts 'Open Cases' which are open for 181+ Days</description>
        <formula>IF( Days_Case_Open__c &gt;= 181, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age 181+</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_between_Receipt_and_Last_Update__c</fullName>
        <description>This field provides the business days between 'Last Modified Date' and 'Received Date'</description>
        <formula>FLOOR(If(IsPickval (Status, "Closed"),0,(IF(AND(MOD(TODAY()-DATE(1900,1,7),7)&lt; (LastModifiedDate -  Received_Date__c), ((LastModifiedDate -  Received_Date__c)&lt;7)),(( LastModifiedDate -  Received_Date__c )-2) , ((LastModifiedDate -  Received_Date__c)-(2 * ((LastModifiedDate -  Received_Date__c)/7)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age between Receipt and Last Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged_15_21__c</fullName>
        <formula>IF( Days_Case_Open__c &gt;= 15 &amp;&amp;Days_Case_Open__c &lt;= 21 , 1, 0)</formula>
        <label>Aged 15-21</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged_22_30__c</fullName>
        <formula>IF( Days_Case_Open__c &gt;= 22 &amp;&amp;Days_Case_Open__c &lt;= 30 , 1, 0)</formula>
        <label>Aged 22-30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged_31_60__c</fullName>
        <formula>IF( Days_Case_Open__c &gt;= 31 &amp;&amp;Days_Case_Open__c &lt;= 60 , 1, 0)</formula>
        <label>Aged 31-60</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged_31_Days__c</fullName>
        <description>This will be switched to 1 if the case is older than 31 days</description>
        <formula>IF( Days_Case_Open__c &gt; 31, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aged 31+ Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analysis_Hours__c</fullName>
        <label>Analysis Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_User_Id__c</fullName>
        <description>This field will be a formula field to be used in case aging report to show the owner and his federation Id</description>
        <formula>if (ISBLANK(Owner:User.FirstName), NULL, Owner:User.FirstName +" " + Owner:User.LastName + " / " + Owner:User.Federation_ID__c)</formula>
        <label>Assigned User/Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look Up to AG type accounts</description>
        <label>Broker Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner, Prospect</value>
            </filterItems>
            <infoMessage>Please enter a Name or Agency ID and Check "All fields" to select the Agency</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Agency)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will help us look up for SB type Contact</description>
        <label>Broker Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>2-50, 51+</value>
            </filterItems>
            <infoMessage>Please enter a Name or Agent ID and Check "All fields" to select the Agent</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agent Cases</relationshipLabel>
        <relationshipName>Agent_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Email__c</fullName>
        <description>This field will populate the broker's email address</description>
        <formula>Broker_Agent__r.Email</formula>
        <label>Broker Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_ID__c</fullName>
        <formula>IF( NOT(ISBLANK(Broker_Agent__r.Entity_ID__c)) , Broker_Agent__r.Entity_ID__c, Broker_Agency__r.Entity_ID__c)</formula>
        <label>Broker ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Phone__c</fullName>
        <description>This formula field auto Populates the Broker's Phone Number</description>
        <formula>Broker_Agent__r.Phone</formula>
        <label>Broker Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Service_Team__c</fullName>
        <description>Enter which service team the case belongs to</description>
        <label>Broker Service Team</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SLA_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Broker Sales MD</fullName>
                </value>
                <value>
                    <fullName>Broker Sales 4</fullName>
                </value>
                <value>
                    <fullName>Retro activity Request</fullName>
                </value>
                <value>
                    <fullName>SBC Project</fullName>
                </value>
                <value>
                    <fullName>BCS Specialist</fullName>
                </value>
                <value>
                    <fullName>Small Medium Group</fullName>
                </value>
                <value>
                    <fullName>Team Royal</fullName>
                </value>
                <value>
                    <fullName>Team Indigo</fullName>
                </value>
                <value>
                    <fullName>Team Ocean</fullName>
                </value>
                <value>
                    <fullName>Team Sapphire</fullName>
                </value>
                <value>
                    <fullName>Team Sky</fullName>
                </value>
                <value>
                    <fullName>Team Teal</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Broker Escalation</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broker_Status__c</fullName>
        <description>This formula field is derived from Status Field and will set customer status accordingly. If status is In-Queue, it will set it to open, if closed it will set it to closed and will set it to In-Progress for all other status</description>
        <formula>IF(ISPICKVAL(Status,'In-Queue'), 'Open',  IF(ISPICKVAL(Status,'Closed'), 'Closed', 'In-Progress') )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAFC__c</fullName>
        <description>This field calculates if the case is 'Closed At First Contact'. Business definition - Any case that is closed the same business day is 'CAFC' case</description>
        <formula>if(DATEVALUE( Received_Date__c ) = DATEVALUE( ClosedDate ) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAFC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Age__c</fullName>
        <description>This field calculates the number of business days the case remained open before closure</description>
        <formula>If( ISBLANK(  CreatedDate  ),0,(IF(ISPICKVAL( Status,"Closed"),Datevalue( ClosedDate )-Datevalue(CreatedDate  ),TODAY()- datevalue(CreatedDate  ))))</formula>
        <label>Case Closed Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Comment_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>A workflow will update this field,  the key purpose of  this field is to invoke  a save action for  VR  EAC006 to fire and prevent case edit addition. The counting value in this field will be irreverent.</description>
        <label>Case Comment Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Severity__c</fullName>
        <label>Case Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Age_0_2__c</fullName>
        <description>This field calculates the cases that have been closed in 0-2 business days of receipt</description>
        <formula>IF( Case_Closed_Age__c &lt;= 2 &amp;&amp; NOT(ISBLANK( Received_Date__c )) &amp;&amp; (ispickval(Status,"Closed")) , 1, 0)</formula>
        <label>Closed Age 0-2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Age_15_21__c</fullName>
        <description>This field calculates the cases that have been closed in 15-21 business days of receipt</description>
        <formula>IF(  Case_Closed_Age__c  &gt;= 15 &amp;&amp;Case_Closed_Age__c &lt;= 21 &amp;&amp; NOT(ISBLANK( Received_Date__c )) , 1, 0)</formula>
        <label>Closed Age 15-21</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Age_22_30__c</fullName>
        <description>This field calculates the cases that have been closed in 22-30 business days of receipt</description>
        <formula>IF(  Case_Closed_Age__c  &gt;= 22 &amp;&amp;Case_Closed_Age__c &lt;= 30 &amp;&amp; NOT(ISBLANK( Received_Date__c )) , 1, 0)</formula>
        <label>Closed Age 22-30</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Age_31__c</fullName>
        <description>This field calculates the cases that have been closed after 31 business days of receipt</description>
        <formula>IF(  Case_Closed_Age__c  &gt;= 31 &amp;&amp; NOT(ISBLANK( Received_Date__c )) , 1, 0)</formula>
        <label>Closed Age 31+</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_By_Department_Name__c</fullName>
        <label>Closed By Department Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy1</fullName>
                </value>
                <value>
                    <fullName>Dummy2</fullName>
                </value>
                <value>
                    <fullName>Dummy3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Communitie_Group_ID__c</fullName>
        <formula>IF( ISBLANK( Group_ID__c ) , New_Group_ID__c , Group_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Communitie Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Broker_Service_Team__c</fullName>
        <formula>Contact.Broker_Service_Team__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Broker Service Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_formula__c</fullName>
        <description>This field will be used only in List Views because the standard field 'Case Email' is not available as list view column. It should not be added to Page Layouts to avoid confusion.</description>
        <formula>Contact.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Tier_Level__c</fullName>
        <formula>Contact.Tier_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Tier Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>This field will represent the contact type for a Member and Non Member case</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BIL1-Billing Agent</fullName>
                </value>
                <value>
                    <fullName>BRPM-Broker-Prospective Member</fullName>
                </value>
                <value>
                    <fullName>BRRP-Broker Representative</fullName>
                </value>
                <value>
                    <fullName>CAL0-Other</fullName>
                </value>
                <value>
                    <fullName>CAL1-Member</fullName>
                </value>
                <value>
                    <fullName>CAL2-Member's Representative</fullName>
                </value>
                <value>
                    <fullName>CAL3-Attorney</fullName>
                </value>
                <value>
                    <fullName>CAL4-State Regulatory Agent</fullName>
                </value>
                <value>
                    <fullName>CAL9-Member's Parent/Guardian</fullName>
                </value>
                <value>
                    <fullName>GRGR-Group</fullName>
                </value>
                <value>
                    <fullName>INTD-Internal Department</fullName>
                </value>
                <value>
                    <fullName>LERP-Legal/Exective Representative</fullName>
                </value>
                <value>
                    <fullName>OIRP-Other insurance Carrier Rep</fullName>
                </value>
                <value>
                    <fullName>OTBC-Other BCBS Plan</fullName>
                </value>
                <value>
                    <fullName>PRGR-Prospective Group</fullName>
                </value>
                <value>
                    <fullName>PRME-Prospective Member</fullName>
                </value>
                <value>
                    <fullName>PROD-Producer</fullName>
                </value>
                <value>
                    <fullName>SARP-Sales Representative</fullName>
                </value>
                <value>
                    <fullName>AFHC-Away From Home Care</fullName>
                    <isActive>false</isActive>
                    <label>AFHC-Away From Home Care</label>
                </value>
                <value>
                    <fullName>BRFM-**Deleted-Refer to CALF**</fullName>
                    <isActive>false</isActive>
                    <label>BRFM-**Deleted-Refer to CALF**</label>
                </value>
                <value>
                    <fullName>CAL5-Reporter</fullName>
                    <isActive>false</isActive>
                    <label>CAL5-Reporter</label>
                </value>
                <value>
                    <fullName>CAL6-Subscriber</fullName>
                    <isActive>false</isActive>
                    <label>CAL6-Subscriber</label>
                </value>
                <value>
                    <fullName>CAL7-Husband</fullName>
                    <isActive>false</isActive>
                    <label>CAL7-Husband</label>
                </value>
                <value>
                    <fullName>CAL8-Wife</fullName>
                    <isActive>false</isActive>
                    <label>CAL8-Wife</label>
                </value>
                <value>
                    <fullName>CALF-Former Member</fullName>
                    <isActive>false</isActive>
                    <label>CALF-Former Member</label>
                </value>
                <value>
                    <fullName>DIST-District Office</fullName>
                    <isActive>false</isActive>
                    <label>DIST-District Office</label>
                </value>
                <value>
                    <fullName>NTWL-Network leasing</fullName>
                    <isActive>false</isActive>
                    <label>NTWL-Network leasing</label>
                </value>
                <value>
                    <fullName>PR01-Provider</fullName>
                    <isActive>false</isActive>
                    <label>PR01-Provider</label>
                </value>
                <value>
                    <fullName>PR05-Institutional</fullName>
                    <isActive>false</isActive>
                    <label>PR05-Institutional</label>
                </value>
                <value>
                    <fullName>PR10-Non-Par Provider</fullName>
                    <isActive>false</isActive>
                    <label>PR10-Non-Par Provider</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Department_Name__c</fullName>
        <label>Created By Department Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy 1</fullName>
                </value>
                <value>
                    <fullName>Dummy 2</fullName>
                </value>
                <value>
                    <fullName>Dummy 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,"All Case Details Captured", "Missing: "&amp;IF( ISPICKVAL( Status,""),"Status, ","")&amp;""&amp;IF(ISPICKVAL( Type ,""), "Type, ","")&amp;""&amp;IF( ISPICKVAL( Origin ,""), "Origin, ","")&amp;""&amp;IF( ISPICKVAL( Reason ,""), "Reason, ","")&amp;""&amp;IF( ISPICKVAL( Priority ,""), "Priority, ","")&amp;""&amp;IF( LEN( Subject )&lt;5, "Meaningful Subject Line","")&amp;""&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), "Associated Account and Contact",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,""), 0,15) + IF( ISPICKVAL( Type ,""), 0,15) + IF( ISPICKVAL( Origin ,""), 0,15) + IF( ISPICKVAL(   Reason ,""), 0,15) + IF(ISPICKVAL(Priority, ""),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Case_Open__c</fullName>
        <description>This field shows the number of days this case has remained open</description>
        <formula>/*FLOOR(If(IsPickval (Status, "Closed"),0,(IF(AND(MOD(TODAY()-DATE(1985,6,24),7)&lt; (NOW()   -  Received_Date__c ),   ((NOW()   - Received_Date__c)&lt;7)),((NOW()   - Received_Date__c)-2) , ((NOW()   - Received_Date__c)-(2 * ((NOW()   - Received_Date__c)/7)))))))
*/


If(IsPickval (Status, "Closed"),0,
    (
    5*FLOOR((TODAY()-DATE(1996,01,01))/7) + 
    MIN(5, MOD(TODAY()-DATE(1996,01,01), 7))
        ) - (
    5*FLOOR((DATEVALUE(Received_Date__c)-DATE(1996,01,01))/7) + 
    MIN(5, MOD(DATEVALUE(Received_Date__c)-DATE(1996,01,01), 7))
)
)</formula>
        <label>Days Case Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deployment_Hours__c</fullName>
        <label>Deployment Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details_of_Change_Required_for_this_NAEG__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Details of Change Required for NAEGS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E_Description__c</fullName>
        <description>This field will hold the Eligibility Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Effective_date__c</fullName>
        <description>This field will hold the Eligibility's Effective Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_Plan_Description__c</fullName>
        <description>This field will hold the Eligibility's Plan description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Plan_ID__c</fullName>
        <description>This field will hold the Eligibility's Plan Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Product_Category__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>E Product Category</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Product__c</fullName>
        <description>This field will hold the Eligibility Product Information</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Termination_date__c</fullName>
        <description>This field will hold the Eligibility's Term Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_NAEGS_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date of NAEGS Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSPGP_2_50__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added PDB in label. API Name is not changed to save the impact on code and other objects</description>
        <label>FSP/GP/PDB(2-50)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Type_FSP__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Type_GP__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>2-50</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Type_PDB__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FSP/GP/PDB Cases (2-50)</relationshipLabel>
        <relationshipName>FSP_GP_Cases_2_50</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSPGP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added PDB in label. API Name is not changed to save the impact on code and other objects</description>
        <label>FSP/GP/PDB</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND (2 OR 3 OR 5)) OR (4 AND 1)</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Type_FSP__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Type_GP__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>51+</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Type_PDB__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FSP/GP/PDB Cases</relationshipLabel>
        <relationshipName>FSP_GP_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSP_GP_51__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will lookup to account that have FSP or GP check box checked. Added PDB in Label. API Name is not changed to avoid the impact on code/other objects</description>
        <label>FSP/GP/PDB(51+)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FSP/GP/PDB Cases (51+)</relationshipLabel>
        <relationshipName>FSPGPCases_51</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSP_GP_ID__c</fullName>
        <description>This will store the Entity ID of FSP or GP or PDB. API Name is not changed to save the code changes and impact on other objects and testing</description>
        <formula>FSPGP__r.Entity_ID__c</formula>
        <label>FSP/GP/PDB ID</label>
        <type>Text</type>
    </fields>
</CustomObject>